5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4029/executions/1668_2971.log
== TEST (2019-04-15 18:17:59) 
-- CODE:
x= float(input("Qual a taxa de juros? "))
y= float(input("Qual o valor do apartamento? "))
qf = (1500 * ((1 + x) ** t))
if (qf >= 36 * 1500):
	print(round(qf, 2))
	print("Sim")
else: 
	print(round(qf, 2))
	print("Nao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    qf = (1500 * ((1 + x) ** t))
NameError: name 't' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:18:19) 
-- CODE:
x= float(input("Qual a taxa de juros? "))
y= float(input("Qual o valor do apartamento? "))
qf = (1500 * ((1 + x) ** y))
if (qf >= 36 * 1500):
	print(round(qf, 2))
	print("Sim")
else: 
	print(round(qf, 2))
	print("Nao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    qf = (1500 * ((1 + x) ** y))
OverflowError: (34, 'Numerical result out of range')
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:19:28) 
-- CODE:
x= float(input("Qual a taxa de juros? "))
y= float(input("Qual o valor do apartamento? "))
qf = (1500 * ((1 + x) ** y))
j= 36 * 1500
if (qf => j):
	print(round(qf, 2))
	print("Sim")
else: 
	print(round(qf, 2))
	print("Nao")
-- ERROR:
File "XXXX", line 5
    if (qf => j):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:19:44) 
-- CODE:
x= float(input("Qual a taxa de juros? "))
y= float(input("Qual o valor do apartamento? "))
qf = (1500 * ((1 + x) ** y))
j= 36 * 1500
if (qf >= j):
	print(round(qf, 2))
	print("Sim")
else: 
	print(round(qf, 2))
	print("Nao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    qf = (1500 * ((1 + x) ** y))
OverflowError: (34, 'Numerical result out of range')
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:20:33) 
-- CODE:
x= float(input("Qual a taxa de juros? "))
y= float(input("Qual o valor do apartamento? "))
qf = (1500 * ((1 + x) ** y))
if (qf >= y):
	print(round(qf, 2))
	print("Sim")
else: 
	print(round(qf, 2))
	print("Nao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    qf = (1500 * ((1 + x) ** y))
OverflowError: (34, 'Numerical result out of range')
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:24:02) 
-- CODE:
x= float(input("Qual a taxa de juros? "))
y= float(input("Qual o valor do apartamento? "))
qf = 1500.00 * ((1 + x) ** 36)
if (qf >= y):
	print(round(qf, 2))
	print("Sim")
else: 
	print(round(qf, 2))
	print("Nao")
-- OUTPUT:
14365502.76
Sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:24:17) 
-- CODE:
x= float(input("Qual a taxa de juros? "))
y= float(input("Qual o valor do apartamento? "))
qf = 1500.00 * ((1 + x) ** 36)
if (qf >= y):
	print(round(qf, 2))
	print("Sim")
else: 
	print(round(qf, 2))
	print("Nao")
-- EXECUTION TIME:
0.130452
-- TEST CASE 1:
---- input:
0.29
125250
---- correct output:
14365502.76
Sim
---- user output:
14365502.76
Sim
-- TEST CASE 2:
---- input:
0.15
300000
---- correct output:
229727.78
Nao
---- user output:
229727.78
Nao
-- TEST CASE 3:
---- input:
0.2
150000
---- correct output:
1063202.81
Sim
---- user output:
1063202.81
Sim
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
